--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
 <body>
     <header class="header">
-        <div class="header_information">
-            <a href="index.html" class="header_logo">
-                <img src="https://user-images.githubusercontent.com/51093088/68088296-d252a500-fe6e-11e9-9c69-215e315f8ad9.png"
-                    alt="logo" class="header_logo-image">
-            </a>
+        <div class="header_information-open">
+            <div class="header_menu">
+                <a href="index.html" class="header_logo">
+                    <img src="https://user-images.githubusercontent.com/51093088/68088296-d252a500-fe6e-11e9-9c69-215e315f8ad9.png"
+                        alt="logo" class="header_logo-image">
+                </a>
+                <button class="header_toggle"><span class="visually-hidden">Открыть меню</span></button>
+            </div>
+
             <ul class="header_navigation">
                 <li class="header_navigation-list">
                     <a href="#" class="header_navigation-item">Главная</a>
@@ -122,33 +126,42 @@
                 <li class="reviews-information_item reviews-information_item1">
                     <p class="reviews_item-information">25 лет, водитель трамвая</p>
                     <p class="reviews_item-name">Николай Петров</p>
-                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                        привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
+                        фотографии!»</p>
                 </li>
                 <li class="reviews-information_item reviews-information_item2">
                     <p class="reviews_item-information">30 лет, инженер</p>
                     <p class="reviews_item-name">Иванов Иван</p>
-                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                        привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
+                        фотографии!»</p>
                 </li>
                 <li class="reviews-information_item reviews-information_item3">
                     <p class="reviews_item-information">20 лет, студент</p>
                     <p class="reviews_item-name">Петров Петр</p>
-                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                        привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
+                        фотографии!»</p>
                 </li>
             </ul>
         </div>
     </section>
 
     <section class="price">
-            <input type="radio" name="price_item" id="econom" class="price_radio">
-            <input type="radio" name="price_item" id="standart" class="price_radio" checked>
-            <input type="radio" name="price_item" id="plus" class="price_radio">
+        <input type="radio" name="price_item" id="econom" class="price_radio">
+        <input type="radio" name="price_item" id="standart" class="price_radio" checked>
+        <input type="radio" name="price_item" id="plus" class="price_radio">
 
         <table class="price_table">
             <tr class="price_table-row">
                 <th class="price_table-header-hidden"></th>
-                <th class="price_table-header">База<p class="price_header-price">1,99 USD</p></th>
-                <th class="price_table-header">Стандарт<p class="price_header-price">3,99 USD</p></th>
-                <th class="price_table-header">Анлим<p class="price_header-price">9,99 USD</p></th>
+                <th class="price_table-header">База<p class="price_header-price">1,99 USD</p>
+                </th>
+                <th class="price_table-header">Стандарт<p class="price_header-price">3,99 USD</p>
+                </th>
+                <th class="price_table-header">Анлим<p class="price_header-price">9,99 USD</p>
+                </th>
             </tr>
             <tr class="price_table-row">
                 <td class="price_table-data table-data-hidden">Розовый фильтр</td>
@@ -193,25 +206,30 @@
         </div>
         <div class="footer_social">
             <a href="#" class="footer_logo">
-                <img src="https://user-images.githubusercontent.com/51093088/68765110-168f3380-062d-11ea-873c-1c28cce4eae1.png" alt="logo" class="footer_logo-image">
+                <img src="https://user-images.githubusercontent.com/51093088/68765110-168f3380-062d-11ea-873c-1c28cce4eae1.png"
+                    alt="logo" class="footer_logo-image">
             </a>
 
             <div class="footer_social-list">
                 <a href="#" class="footer_social-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68766117-4dfedf80-062f-11ea-8cfb-2d293b38e7c0.png" alt="twitter-link" class="footer_social-image">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766117-4dfedf80-062f-11ea-8cfb-2d293b38e7c0.png"
+                        alt="twitter-link" class="footer_social-image">
                 </a>
                 <a href="#" class="footer_social-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68766116-4dfedf80-062f-11ea-98d7-89f4c3144b18.png" alt="facebook-link" class="footer_social-image">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766116-4dfedf80-062f-11ea-98d7-89f4c3144b18.png"
+                        alt="facebook-link" class="footer_social-image">
                 </a>
                 <a href="#" class="footer_social-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68766115-4d664900-062f-11ea-86a4-ebc3223134f0.png" alt="youtoobe-link" class="footer_social-image">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766115-4d664900-062f-11ea-86a4-ebc3223134f0.png"
+                        alt="youtoobe-link" class="footer_social-image">
                 </a>
             </div>
 
             <div class="footer_social-text">
                 <p class="social-text">Разработано</p>
                 <a href="#" class="social-link">
-                    <img src="https://user-images.githubusercontent.com/51093088/68766114-4d664900-062f-11ea-8b59-70d2e0d77167.png" alt="" class="social-link_image">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766114-4d664900-062f-11ea-8b59-70d2e0d77167.png"
+                        alt="" class="social-link_image">
                 </a>
             </div>
         </div>
