--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <div class="header_information-open">
+        <nav class="main-nav-open">
             <div class="header_menu">
                 <a href="index.html" class="header_logo">
                     <img src="https://user-images.githubusercontent.com/51093088/68088296-d252a500-fe6e-11e9-9c69-215e315f8ad9.png"
@@ -36,7 +36,7 @@
                     <a href="#" class="header_navigation-item">HTML Academy</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
     <section class="download">
