--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <li class="header_navigation-list">
                     <a href="#" class="header_navigation-item">HTML Academy</a>
                 </li>
+                <li class="header_navigation-list">
+                    <a href="#" class="header_navigation-item">HTML Academy</a>
+                </li>
             </ul>
         </nav>
     </header>
